# dalong.llm-tools

./: .gitignore  20240509langchain.ipynb  20240512translate-deepseek.ipynb  20240512translate.ipynb  20240514translate-deepseek.ipynb  20240514translate-openai.ipynb  20240515translate-gemini.ipynb  20240516translate-local.ipynb  20240521bge-m3.ipynb  20240706translate-claude.ipynb  20240706translate-deepseek.ipynb  20240706translate-openai.ipynb  20240708translate-audio-claude.ipynb  20240720chat-with-image.ipynb  20240728text-proofreading.ipynb  20240914chat-openai.ipynb  AGENTS.md  CHECKLIST.md  CLAUDE.md  DEVICE_DETECTION.md  FINAL_REPORT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  README_DEVICE_DETECTION.md  SUMMARY.md  agent_test.py  api_key.py  audio-en-gemini.py  audio-en-gpt.py  audio-gpt-en.py  audio-local.py  audio-zh-claude.py  audio-zh-deepseek.py  audio-zh-fireworks.py  audio-zh-gemini.py  audio-zh-gpt.py  audio-zh-local.py  common_tools.py  (+33 more)
archived/: audio_split_translate_en.py  audio_translate.py  audio_translate_deepseek.py  batch_en_video_translate_gemini.py  batch_zh_video_translate.py  book2md_v1.py  en_video_translate_gemini.py  gptpdf2txt.py  gptpdf2txt_local.py  htmltable2csv.py  merge_audio.py  pdf2md_bailian.py  pdf2md_glm.py  pdf2md_gpt.py  pdf2md_local.py  pdf2txt_mistral.py  pdf2txt_qwen.py  skilljar_download.py  split_audio_glm.py  split_audio_local.py  translate_byline.py  translate_byline_bailian.py  translate_byline_deepseek_r1.py  translate_byline_gemini.py  translate_byline_gpt.py  translate_byline_kimi.py  (+22 more)
(+187 files in other folders)
