[project]
name = "dalong-llm-tools"
version = "0.1.0"
description = "the workstation for LLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4==4.12.3",
    "openpyxl==3.1.5",
    "google-genai==1.13.0",
    "google-generativeai==0.8.3",
    "insanely-fast-whisper==0.0.15",
    "langchain-openai==0.3.22",
    "llama-index==0.12.16",
    "llama-index-llms-gemini==0.4.10",
    "llama-index-vector-stores-weaviate==1.3.1",
    "pangu==4.0.6.1",
    "pymupdf==1.25.1",
    "pyperclip==1.9.0",
    "python-dotenv==1.0.1",
    "requests>=2.32.4",
    "shapely==2.0.6",
    "trulens-apps-llamaindex==1.4.0",
    "trulens-eval==1.4.0",
    "trulens-providers-openai==1.4.0",
    "weaviate==0.1.2",
    "weaviate-client==4.10.4",
    "yt-dlp==2024.12.23",
]
